--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.1.1",
-        "nodemon": "^2.0.22"
+        "mongoose": "^7.1.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
     }
 }
