--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.4.0",
+        "axios": "^1.7.7",
+        "client": "file:",
         "dayjs": "^1.11.9",
         "formik": "^2.2.9",
         "query-string": "^8.1.0",
