--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,15 @@
     "author": "Jesús Viafara",
     "license": "ISC",
     "dependencies": {
-        "axios": "^1.4.0",
+        "axios": "^1.7.7",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
-        "express": "^4.18.2",
+        "express": "^4.21.1",
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.1.1",
+        "mongoose": "^7.8.2",
+        "movie-nest": "file:",
         "nodemon": "^3.0.1"
     }
 }
